# deep-drive-python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
day01/: 01_openai_demo.ipynb  01_openai_demo.py
day01/docs/: feature-python-setup.md
day2/docs/: python-setup-uv.md
notebooks/: 01_openai_demo.ipynb  02_google_demo.ipynb
