[project]
name = "deep-drive-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-lru==2.3.0",
    "attrs==26.1.0",
    "babel==2.18.0",
    "beautifulsoup4==4.15.0",
    "bleach==6.4.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.21",
    "decorator==5.3.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fqdn==1.5.1",
    "google-genai>=2.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "ipykernel==7.2.0",
    "ipython==9.14.1",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "jedi==0.20.0",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "json5==0.14.0",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-client==8.9.1",
    "jupyter-console==6.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.1",
    "jupyter-lsp==2.3.1",
    "jupyter-server==2.19.0",
    "jupyter-server-terminals==0.5.4",
    "jupyterlab==4.5.8",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "lark==1.3.1",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.2",
    "mistune==3.2.1",
    "nbclient==0.11.0",
    "nbconvert==7.17.1",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.5.7",
    "notebook-shim==0.2.4",
    "openai==2.41.0",
    "packaging==26.2",
    "pandocfilters==1.5.1",
    "parso==0.8.7",
    "platformdirs==4.10.0",
    "prometheus-client==0.25.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-json-logger==4.1.0",
    "pywinpty==3.0.4",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.34.2",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==2026.5.1",
    "send2trash==2.1.0",
    "setuptools==82.0.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.4",
    "stack-data==0.6.3",
    "terminado==0.18.1",
    "tinycss2==1.5.1",
    "tornado==6.5.7",
    "tqdm==4.68.2",
    "traitlets==5.15.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "uri-template==1.3.0",
    "urllib3==2.7.0",
    "wcwidth==0.8.1",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "widgetsnbextension==4.0.15",
]
